src/objects/Maintenance_SSP_Product__c.object
<CustomObject>
    <fields>
        <fullName>Accreditation_Maintenance_Type__c</fullName>
        <label>Accreditation Maintenance Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nokia Brand of Service</fullName>
                </value>
                <value>
                    <fullName>Partner Branded</fullName>
                </value>
                <value>
                    <fullName>Co-Branded</fullName>
                </value>
                <value>
                    <fullName>Nokia Brand of Service AED</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NokiaCPQ_7705_SSP_Applicable__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Applicable</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Maintenance_Type__c</fullName>
        <label>Maintenance Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Maintenance_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Portfolio__c</fullName>
        <label>Portfolio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Portfolio_New</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Pricing_Cluster__c</fullName>
        <label>Pricing Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NAM</fullName>
                </value>
                <value>
                    <fullName>ROW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>SSP</fullName>
                </value>
                <value>
                    <fullName>SRS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Maintenance &amp; SSP Products</relationshipLabel>
        <relationshipName>Maintenance_SSP_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Split_Ratio__c</fullName>
        <label>Split Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Valid_for__c</fullName>
        <description>For differentiating the records for Indirect and Direct in Maintenance &amp; SSP Product object</description>
        <label>Valid for</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Indirect</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Package_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Package Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waranty_Text_Yeay1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Waranty Text Yeay1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waranty_Text_Yeay2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Waranty Text Yeay2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Maintenance &amp; SSP Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NokiaCPQ_7705_SSP_Applicable__c</columns>
        <columns>NokiaCPQ_Description__c</columns>
        <columns>NokiaCPQ_Maintenance_Type__c</columns>
        <columns>NokiaCPQ_Portfolio__c</columns>
        <columns>Product_Code__c</columns>
        <columns>NokiaCPQ_Product_Type__c</columns>
        <columns>NokiaCPQ_Split_Ratio__c</columns>
        <columns>Accreditation_Maintenance_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MP-{0000}</displayFormat>
        <label>Maintenance &amp; SSP Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maintenance &amp; SSP Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>